@@ -67,16 +67,16 @@ public class TrackingDialog extends Dialog {
   /**
    * Constructs a {@link TrackingDialog} with the given parameters.
    *
-   * @param dataService The {@link TrackingDataService} used for storing tracking data.
-   * @param manga the {@link Manga} to track with the dialog.
-   * @param aniListAPIService the {@link AniListAPIService} used for making requests to the AniList
-   *     API.
+   * @param dataService             The {@link TrackingDataService} used for storing tracking data.
+   * @param manga                   the {@link Manga} to track with the dialog.
+   * @param aniListAPIService       the {@link AniListAPIService} used for making requests to the
+   *                                AniList API.
    * @param suwayomiTrackingService the {@link SuwayomiTrackingService} used for making requests to
-   *     the Suwayomi API.
-   * @param malAPI the {@link MyAnimeListAPIService} used for making requests to the MyAnimeList
-   *     API.
-   * @param mangaService the {@link MangaService} used for making requests to the Suwayomi API for
-   *     manga data.
+   *                                the Suwayomi API.
+   * @param malAPI                  the {@link MyAnimeListAPIService} used for making requests to
+   *                                the MyAnimeList API.
+   * @param mangaService            the {@link MangaService} used for making requests to the
+   *                                Suwayomi API for manga data.
    */
   public TrackingDialog(
       TrackingDataService dataService,
@@ -139,10 +139,10 @@ public class TrackingDialog extends Dialog {
   /**
    * Adds the tracking buttons to the dialog.
    *
-   * @param manga the {@link Manga} to track
+   * @param manga             the {@link Manga} to track
    * @param aniListAPIService the {@link AniListAPIService} to communicate with AniList with
-   * @param tracker the {@link Tracker} instance to update the button states via {@link
-   *     #updateButtons(Button, Button, Tracker)}
+   * @param tracker           the {@link Tracker} instance to update the button states via
+   *                          {@link #updateButtons(Button, Button, Tracker)}
    */
   private void addTrackingButtons(
       Manga manga, AniListAPIService aniListAPIService, Tracker tracker) {
@@ -183,7 +183,7 @@ public class TrackingDialog extends Dialog {
           try {
             displaySearch(manga.getTitle(), manga.getId(), provider, TrackerType.ANILIST);
           } catch (WebClientResponseException.InternalServerError
-              | WebClientRequestException error) {
+                   | WebClientRequestException error) {
             log.error("Invalid response from AniList", error);
             Notification notification = new Notification();
             notification.addThemeVariants(NotificationVariant.LUMO_ERROR);
@@ -212,7 +212,7 @@ public class TrackingDialog extends Dialog {
           try {
             displaySearch(manga.getTitle(), manga.getId(), provider, TrackerType.MAL);
           } catch (WebClientResponseException.InternalServerError
-              | WebClientRequestException error) {
+                   | WebClientRequestException error) {
             log.error("Invalid response from MyAnimeList", error);
             Notification notification = new Notification();
             notification.addThemeVariants(NotificationVariant.LUMO_ERROR);
@@ -411,10 +411,10 @@ public class TrackingDialog extends Dialog {
   /**
    * Configures the end date field for tracking a manga.
    *
-   * @param tracker the tracker to update the end date for
-   * @param endDate the end date field to configure
+   * @param tracker    the tracker to update the end date for
+   * @param endDate    the end date field to configure
    * @param mangaStats the statistics for the manga
-   * @param startDate the start date field to check against
+   * @param startDate  the start date field to check against
    */
   private void configureTrackingEndDateField(
       Tracker tracker,
@@ -476,9 +476,9 @@ public class TrackingDialog extends Dialog {
   /**
    * Creates a field for tracking the start date of a manga.
    *
-   * @param tracker the tracker to update the start date for
+   * @param tracker    the tracker to update the start date for
    * @param mangaStats the statistics for the manga
-   * @param endDate the end date field to check against
+   * @param endDate    the end date field to check against
    * @return a {@link SuperDatePicker} for tracking the start date of the manga
    */
   @NotNull
@@ -528,7 +528,7 @@ public class TrackingDialog extends Dialog {
   /**
    * Creates a field for tracking the score of a manga.
    *
-   * @param tracker the tracker to update the score for
+   * @param tracker    the tracker to update the score for
    * @param mangaStats the statistics for the manga
    * @return a {@link ComboBox} for tracking the score of the manga
    */
@@ -565,7 +565,7 @@ public class TrackingDialog extends Dialog {
           }
 
           double numericValue = Double.parseDouble(e.getValue());
-          double biggestValue = Double.parseDouble(trackingScores.get(trackingScores.size() - 1));
+          double biggestValue = Double.parseDouble(trackingScores.getLast());
 
           if (numericValue > biggestValue) {
             score.setValue(e.getOldValue());
@@ -600,27 +600,26 @@ public class TrackingDialog extends Dialog {
   /**
    * Creates a ComboBox for selecting the tracking status of a manga.
    *
-   * @param tracker the tracker to update the status for
+   * @param tracker    the tracker to update the status for
    * @param mangaStats the statistics for the manga
-   * @param provider the provider with which to get info about the manga
+   * @param provider   the provider with which to get info about the manga
    * @return a {@link ComboBox} for selecting the status of the manga
    */
   @NotNull
   private ComboBox<?> getTrackingStatusField(
       Tracker tracker, MangaStatistics mangaStats, TrackerProvider provider) {
-    ComboBox<?> status;
+    ComboBox<?> status = switch (mangaStats) {
+      case AniListMangaStatistics aniListMangaStatistics ->
+          configureStatusComboBoxAniList(tracker, aniListMangaStatistics);
 
-    if (mangaStats instanceof AniListMangaStatistics) {
-      status = configureStatusComboBoxAniList(tracker, (AniListMangaStatistics) mangaStats);
-    } else if (mangaStats instanceof MALMangaStatistics) {
-      status = configureStatusComboBoxMAL(tracker, (MALMangaStatistics) mangaStats);
-    } else if (mangaStats instanceof SuwayomiMangaStatistics) {
-      status =
-          configureStatusBoxSuwayomi(
-              tracker, (SuwayomiMangaStatistics) mangaStats, (SuwayomiProvider) provider);
-    } else {
-      throw new IllegalArgumentException("Unknown MangaStatistics type");
-    }
+      case MALMangaStatistics malMangaStatistics ->
+          configureStatusComboBoxMAL(tracker, malMangaStatistics);
+
+      case SuwayomiMangaStatistics suwayomiMangaStatistics ->
+          configureStatusBoxSuwayomi(tracker, suwayomiMangaStatistics, (SuwayomiProvider) provider);
+
+      case null, default -> throw new IllegalArgumentException("Unknown MangaStatistics type");
+    };
 
     status.setPlaceholder("Status");
     status.addClassName("two-span");
@@ -630,7 +629,7 @@ public class TrackingDialog extends Dialog {
   /**
    * Creates and configures a ComboBox for selecting the status of a manga on AniList.
    *
-   * @param tracker the tracker to update the status for
+   * @param tracker    the tracker to update the status for
    * @param mangaStats the statistics for the manga
    * @return a {@link ComboBox} for selecting the status of the manga
    */
@@ -654,7 +653,7 @@ public class TrackingDialog extends Dialog {
   /**
    * Creates and configures a ComboBox for selecting the status of a manga on MyAnimeList.
    *
-   * @param tracker the tracker to update the status for
+   * @param tracker    the tracker to update the status for
    * @param mangaStats the statistics for the manga
    * @return a {@link ComboBox} for selecting the status of the manga
    */
@@ -678,13 +677,13 @@ public class TrackingDialog extends Dialog {
   /**
    * Configures a ComboBox for selecting the status of a manga on Suwayomi.
    *
-   * @param tracker The {@link Tracker} used to retrieve and update the status of the manga.
+   * @param tracker    The {@link Tracker} used to retrieve and update the status of the manga.
    * @param statistics The {@link SuwayomiMangaStatistics} used to get the current status of the
-   *     manga.
-   * @param provider The {@link SuwayomiProvider} used to get the possible statuses for a manga on
-   *     Suwayomi.
+   *                   manga.
+   * @param provider   The {@link SuwayomiProvider} used to get the possible statuses for a manga on
+   *                   Suwayomi.
    * @return A {@link ComboBox} of {@link Status} objects representing the possible statuses for a
-   *     manga on Suwayomi.
+   * manga on Suwayomi.
    */
   private ComboBox<Status> configureStatusBoxSuwayomi(
       Tracker tracker, SuwayomiMangaStatistics statistics, SuwayomiProvider provider) {
@@ -719,8 +718,8 @@ public class TrackingDialog extends Dialog {
   /**
    * Creates a Field for tracking the chapter progress of a manga.
    *
-   * @param tracker the tracker to update the progress for
-   * @param mangaStats the statistics for the manga
+   * @param tracker     the tracker to update the progress for
+   * @param mangaStats  the statistics for the manga
    * @param maxChapters the maximum number of chapters for the manga
    * @return a {@link SuperDoubleField} for tracking the chapter progress
    */
@@ -766,10 +765,10 @@ public class TrackingDialog extends Dialog {
   /**
    * Displays a dialog for the user to select a manga for tracking.
    *
-   * @param mangaName The name of the manga to be tracked.
-   * @param mangaId The ID of the manga to be tracked.
+   * @param mangaName       The name of the manga to be tracked.
+   * @param mangaId         The ID of the manga to be tracked.
    * @param trackerProvider The {@link TrackerProvider provider} to be used for tracking the manga.
-   * @param trackerType The {@link TrackerType} to be used for tracking the manga.
+   * @param trackerType     The {@link TrackerType} to be used for tracking the manga.
    */
   private void displaySearch(
       String mangaName, int mangaId, TrackerProvider trackerProvider, TrackerType trackerType) {
@@ -794,8 +793,8 @@ public class TrackingDialog extends Dialog {
    * Updates the tracking buttons with the current tracking status.
    *
    * @param aniListBtn the AniList tracking button
-   * @param malBtn the MyAnimeList tracking button
-   * @param tracker the tracker to check the status of
+   * @param malBtn     the MyAnimeList tracking button
+   * @param tracker    the tracker to check the status of
    */
   private void updateButtons(Button aniListBtn, Button malBtn, Tracker tracker) {
     if (tracker.hasAniListId()) {
